# ndns

./: .gitignore  Cargo.toml  LICENSE  create_blocklist.py
.github/workflows/: build.Dockerfile  build.yaml
src/: config.rs  dns.rs  main.rs
